name:                thecreekmores-org
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/jcreekmore/thecreekmores-org#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Creekmore
maintainer:          jonathan@thecreekmores.org
copyright:           2016 Jonathan Creekmore
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable thecreekmores-org
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*,
                       data-default
